--- a/src/components/Auth/style.css
+++ b/src/components/Auth/style.css
@@ -1,82 +1,78 @@
 body {
-    margin:0;
-    padding:0;
-    font-family:sans-serif;
-    
-
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
 
-.box{
-    width:400px;
-    padding:40px;
+.box {
+    width: 400px;
+    padding: 40px;
     position: absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    background:#191919;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #191919;
     text-align: center;
+    border-bottom-left-radius: 30%;
+    border-top-right-radius: 30%;
 }
 
-.box p{
-    color:white;
-    font-weight:200;
+.box p {
+    color: white;
+    font-weight: 200;
 }
+
 .box h1 {
-    color:white;
+    color: white;
     text-transform: uppercase;
     font: weight 500;
 }
-.box input[type="text"],.box input[type="password"]{
-    border:0;
-    background:none;
-    display:block;
-    margin:20px auto;
-    text-align:center;
-    border:2px solid#3498db;
-    padding:14px 10px;
-    width:240px;
-    outline:none;
-    color:white;
-    border-radius:24px;
+
+.box input[type="text"],
+.box input[type="password"] {
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid#3498db;
+    padding: 14px 10px;
+    width: 240px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
     transition: 0.25s;
 }
 
-
-
-
-
-.box input[type="text"]:hover,.box input[type="password"]:hover{
-    width:280px;
-    border-color:#2ecc71;
+.box input[type="text"]:hover,
+.box input[type="password"]:hover {
+    width: 280px;
+    border-color: #2ecc71;
 }
 
-.box input[type="submit"]{
-    border:0;
-    background:none;
-    display:block;
-    margin:20px auto;
-    text-align:center;
-    border:2px solid #2ecc71;
-    padding:14px 40px;
-    outline:none;
-    color:white;
-    border-radius:24px;
+.box input[type="submit"] {
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #2ecc71;
+    padding: 14px 40px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
     transition: 0.25s;
-    cursor:pointer;
+    cursor: pointer;
 }
 
-.box input[type="submit"]:hover{
-    background:#2ecc71;
+.box input[type="submit"]:hover {
+    background: #2ecc71;
 }
 
-
-
-
-
-
-
-
-
-
-
-
+.login {
+    background-image: url('./images/one.jpg');
+    width: 1530px;
+    height: 750px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
